# week3-machine-learning

./: Aqar_prices.ipynb  Date-classifier_model.pkl  Date_classifier.ipynb  Penguin_classifier.ipynb  Spam_detection.ipynb  Titanic_classifier.ipynb  Titanic_model.pkl  notebook1.ipynb  pyproject.toml
