[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-analysis"
version = "0.1.0"
description = "Analysis environments for Aqar, Date, Penguin, and Titanic datasets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "joblib",
    "kagglehub"
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab",
    "notebook"
]